# cycle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: config.yaml
cycle/: __init__.py  __main__.py  app.py  recording_transcription.py  screen_recorder.py  screen_recording.py  workflow_automation.py
cycle/tools/: __init__.py  base.py  collection.py  computer.py
cycle/utils/: config.py  constants.py  prompts.py  strings.py
prompts/: __init__.py  computer_use_specification.json  computer_use_system.jinja2  transcribe_recording_system.jinja2
tests/cycle/: __init__.py
tests/cycle/utils/: config_test.py
